tests/paczka2/big_fuzzy/77128130.err
Error in line 9: nhV A908 79,9
Error in line 7: mp82AO7jKKi S237 12,9
Error in line 28: Wap S237 56,6
Error in line 29: S207 S237 95,8
Error in line 54: H29k06enH5 S237 78,7
Error in line 55: H29k06enH5 S978 4,6
Error in line 42: mp82AO7jKKi S978 42,6
Error in line 71: mp82AO7jKKi S207 10,55
Error in line 83: mp82AO7jKKi S237 34,8
Error in line 85: mp82AO7jKKi S978 38,3
Error in line 91: Wap S978 75,1
Error in line 93: S207 S237 90,8
Error in line 86: mp82AO7jKKi S237 92,5
Error in line 104: mp82AO7jKKi A908 32,3
Error in line 94: oQm27Uelf A908 73,0
Error in line 109: S207 S978 15,4
Error in line 113: oQm27Uelf S978 38,2
Error in line 137: H29k06enH5 S237 289,8
Error in line 141: oQm27Uelf S207 94,6
Error in line 143: S207 A908 23,1
Error in line 140: nhV S237 9,1
Error in line 160: S207 S237 91,86
Error in line 159: oQm27Uelf S978 99,4
Error in line 168: mp82AO7jKKi S237 99,5
Error in line 169: mp82AO7jKKi A908 56,3
Error in line 192: AEH S978 10,24
Error in line 191: H29k06enH5 A908 100,0
Error in line 204: nhV S207 13,1
Error in line 199: Wap S207 41,3
Error in line 207: AEH S237 48,5
Error in line 220: AEH S978 38,4
Error in line 225: AEH S207 76,2
Error in line 222: nhV S207 74,2
Error in line 230: oQm27Uelf S978 75,52
Error in line 233: AEH S237 45,1
Error in line 223: H29k06enH5 S207 50,8
Error in line 239: H29k06enH5 A908 61,8
